--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+        <a href="#">HOME</a>
+        <a href="#">ABOUT</a>
+    </header>
     
 
 
